--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Julian Leonel Rocco">
+    <meta name="description" content="Estudiante de Comercio Internacional con conocimientos en Economía y Administración, enfocado en el comercio global y la gestión empresarial.">
+    <meta name="OG:title" content="Julian Leonel Rocco">
+    <meta name="OG:description" content="Estudiante de Comercio Internacional con conocimientos en Economía y Administración, enfocado en el comercio global y la gestión empresarial.">
+    <meta name="OG:image" content="profileprototuipo.jpg">
+
     <title>Curriculum Vitae</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
@@ -200,17 +206,17 @@
     <div class="footer__content">
       <p class="footer__name">Julián Leonel Rocco</p>
       <div class="footer__socials">
-        <a href="mailto:tuemail@gmail.com" target="_blank">
+        <a href="mailto:julianleonelrocco@gmail.com" target="_blank">
           <i class="bi bi-envelope"></i>
         </a>
-        <a href="https://www.instagram.com/tuusuario" target="_blank">
-          <i class="bi bi-instagram"></i>
-        </a>
-        <a href="https://wa.me/1234567890" target="_blank">
+        <a href="https://wa.me/1139083335" target="_blank">
         <i class="bi bi-whatsapp"></i>
         </a>
-      <a href="https://www.linkedin.com/in/tuusuario" target="_blank">
+      <a href="https://www.linkedin.com/in/julian-rocco-8034b6277?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
         <i class="bi bi-linkedin"></i>
+      </a>
+      <a href="https://github.com/JulianRocco" target="_blank">
+        <i class="bi bi-github"></i>
       </a>
     </div>
   </div>
