--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="OG:title" content="Julian Leonel Rocco">
     <meta name="OG:description" content="Estudiante de Comercio Internacional con conocimientos en Economía y Administración, enfocado en el comercio global y la gestión empresarial.">
     <meta name="OG:image" content="profileprototuipo.jpg">
-
+    <link rel="icon" href="logoO.png" type="image/png">
     <title>Curriculum Vitae</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
@@ -209,7 +209,7 @@
         <a href="mailto:julianleonelrocco@gmail.com" target="_blank">
           <i class="bi bi-envelope"></i>
         </a>
-        <a href="https://wa.me/1139083335" target="_blank">
+        <a href="https://wa.me/5491139083335" target="_blank">
         <i class="bi bi-whatsapp"></i>
         </a>
       <a href="https://www.linkedin.com/in/julian-rocco-8034b6277?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
