--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <!--msg 1 -->
             <div class="msg">
                 <p class="msg__content">
-                  Hola, ¿cómo estás? Mi nombre es Julián Rocco, tengo 22 años. Me considero una persona muy responsable, perseverante y con una gran capacidad de adaptación. Estoy interesado en comprender las dinámicas globales y bancarias.
+                  Hola, ¿cómo estás? Mi nombre es Julián Rocco, me considero una persona muy responsable, perseverante y con una gran capacidad de adaptación. Estoy interesado en comprender las dinámicas globales y bancarias.
                 </p>
             </div>
             <!--msg 2-->
@@ -224,3 +224,4 @@
       <script src="script.js"></script>      
     </body>
 </html>
+
