--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <div class="card">
             <div class="card__front">
               <div class="card__data">
-                <h3>Accounting office</h3>
+                <h3>ACCOUNTING OFFICE</h3>
               </div>
             </div>
             <div class="card__back">
@@ -161,7 +161,7 @@
           <div class="card">
             <div class="card__front">
               <div class="card__data">
-                <h3>CUSTOMS/TARIFF CLASSIFICATION</h3>
+                <h3>CUSTOMS/TARIFFS CLASSIFICATION</h3>
               </div>
             </div>
             <div class="card__back">
@@ -227,3 +227,4 @@
       <script src="script.js"></script>      
     </body>
 </html>
+
